[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
criterion = "0.5.1"
itertools = "0.12.0"
num = "0.4.1"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }

[[bench]]
name = "benchmark"
harness = false