[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
criterion = "0.5.1"
itertools = "0.13.0"
ndarray = "0.15.6"
num = "0.4.3"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }

[[bench]]
name = "benchmark"
harness = false
