[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
criterion = "0.8.0"
itertools = "0.14.0"
ndarray = "0.17.1"
num = "0.4.3"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"] }

[[bench]]
name = "benchmark"
harness = false
